# monopoly

./: .flake8  .gitignore  Procfile  README.md  compose.yaml  index.html  manage.py  monopoly.code-workspace  mosquitto.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  routers.py  settings.py  urls.py
api/core/: admin.py  board_structures.py  models.py  testutils.py
api/core/game/: models.py  serializers.py  test.py  turn.py  views.py
api/core/migrations/: 0001_initial.py
api/serializers/: tile.py
api/tests/: __init__.py  test_tile.py
api/viewsets/: tile.py
board/: .eslintrc  Dockerfile  index.html  nuxt.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  url.js  vite.config.js  vitest.config.js
board/board/: board.test.js  corner_tile.js  graph.js  graph.test.js  index.js  side_tile.js  texture.js  textures.sketch  tile.js
board/character/: animations.js  index.js  models.js  states.js
board/components/: CreateGameCode.vue  GLTFViewer.vue
board/composables/: api.js  device.js  model.js  mqtt.js  texture.js  useApi.js  useGLTF.js  useURL.js
board/layouts/: default.vue  empty.vue  full.vue
board/pages/: gameee.vue  index.vue
board/pages/game/: [id].vue
board/pages/lobby/: [id].vue
board/plugins/: qrcode.js
board/src/: App.vue  api.js  main.js  mqtt_client.js  router.js
board/src/board/: board_strucutre.js  corner_tile.js  index.js  side_tile.js  tile.js
board/src/character/: animations.js  index.js
board/src/components/: CreateGameCode.vue
board/src/meshes/: board.js
board/src/models/: index.js
board/src/textures/: index.js  textures.sketch
board/src/views/: Game.vue  Lobby.vue  Start.vue
board/utils/: api.js  gltf.js  url.js
broker/: apps.py  mqtt_client.py
certs/: ca.crt  ca.key  ca.srl  server.cnf  server.crt  server.csr  server.key
common/components/: GLTFViewer.vue
common/utils/: filter.js  mqtt.js
config/: paths.js  webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
game/: admin.py
game/migrations/: 0001_initial.py  0002_tilegroup.py  0003_tile.py  0004_figure.py  0005_tile_is_corner.py  0006_auto_20210307_1239.py
game/models/: __init__.py  action_card.py  board.py  figure.py  game.py  tile.py  tile_group.py
game/tests/: fixtures.py  test_tile.py  test_tiles.py
gamemaster/: .flake8  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
gamemaster/app/: admin.py  apps.py  asgi.py  models.py  mqtt_client.py  settings.py  statemachine.py  urls.py  validators.py
gamemaster/app/action/: action.py  built_in_actions.py  fields.py  registry.py  trigger.py
gamemaster/app/authentication/: serializers.py  views.py
gamemaster/app/board/: models.py  monopoly_swiss.py  serializers.py  views.py
gamemaster/app/device/: models.py  serializers.py  token_middleware.py  views.py
gamemaster/app/game/: models.py  participation.py  serializers.py  views.py
gamemaster/app/management/commands/: devsetup.py
gamemaster/app/migrations/: 0001_initial.py
gamemaster/app/storage/: storages.py
gamemaster/core/: admin.py  apps.py  exceptions.py  models.py  mqtt_client.py  statemachine.py  testutils.py  validators.py  views.py
gamemaster/core/action/: action.py  built_in_actions.py  exceptions.py  fields.py  registry.py  tests.py
gamemaster/core/authentication/: models.py  serializers.py  tests.py  views.py
gamemaster/core/board/: __init__.py  board.py  models.py  monopoly.py  monopoly_swiss.py  registry.py  serializers.py  tests.py  views.py
gamemaster/core/device/: models.py  serializers.py  tests.py  token_middleware.py  views.py
gamemaster/core/e2e_tests/: test_bla.py  testcase.py  tests.py
gamemaster/core/game/: dice.py  exceptions.py  models.py  participation.py  permissions.py  receviers.py  serializers.py  state_machine.py  tests.py  views.py
gamemaster/core/management/commands/: devsetup.py
gamemaster/core/migrations/: 0001_initial.py  0002_board_alter_character_identifier_alter_game_status_and_more.py  0002_remove_board_root_tile_tile_texture.py  0002_tile_action_context_alter_character_model.py  0003_participation_state.py  0003_remove_board_root_node_board_root_tile_and_more.py
gamemaster/docker/: entrypoint.sh
gamemaster/tests/: case.py  conftest.py  test_actions.py  test_authentication.py  test_board.py  test_device.py  test_e2e.py  test_game.py  utils.py
ingress/: Dockerfile  default.conf.template
monopoly/: settings.py  urls.py  wsgi.py
mosquitto/: mosquitto.conf
player/: .prettierrc.js  Dockerfile  eslint.config.mjs  nuxt.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
player/assets/css/: tailwind.css
player/components/: AppBar.vue  CharacterWheel.vue  GLTFViewer.vue  QRCodeScanner.vue
player/composables/: api.js  mqtt.js  useApi.js
player/layouts/: default.vue  empty.vue
player/middleware/: user.global.js
player/migrations/: 0001_initial.py
player/pages/: index.vue  login.vue
player/pages/create_game/: [token].vue
player/pages/game/: [id].vue
player/pages/game/[id]/: account.vue  index.vue  join.vue  play.vue  properties.vue
player/pages/game/create/: [token].vue
player/pages/participation/[id]/: play.vue  properties.vue
player/plugins/: api.js  qr-code-reader.js
player/stores/: user.js
player/utils/: api.js  mqtt.js
src/: index.js
