[tool.poetry]
name = "gamemaster"
version = "0.1.0"
description = ""
authors = ["Kevin Bieri <bierike@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4"
paho-mqtt = "^2.1.0"
django = "^5.2"
django-extensions = "^4.1"
djangorestframework = "^3.16.0"
pydash = "^8.0.5"
drf-standardized-errors = "^0.14.1"
django-ordered-model = "^3.7.4"
pygltflib = "^1.16.3"
pytest-django = "^4.11.1"
django-configurations = "^2.5.1"
python-statemachine = "^2.5.0"
drf-spectacular = "^0.28.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
pytest-django = "^4.11.1"
ruff = "^0.11.5"
pytest-playwright = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
DJANGO_CONFIGURATION = "Testing"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--nomigrations"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "PT", "ARG001", "ARG002", "RUF012", "ISC", "COM"]

[tool.ruff.lint.per-file-ignores]
"core/migrations/*" = ["E501"]
"core/**/test*.py" = ["S107", "S106", "S105", "S311"]
